  . array_diff_ukey() (Andrey)
  . array_intersect_key() (Christiano Duarte)
  . array_intersect_ukey() (Christiano Duarte)
  . array_product() (Andrey)
  . DomDocumentFragment::appendXML() (Christian)
  . fputcsv() (David Sklar)
  . htmlspecialchars_decode() (Ilia)
  . inet_pton() (Sara)
  . inet_ntop() (Sara)
  . mysqli::client_info property (Georg)
  . posix_access() (Magnus)
  . SimpleXMLElement::registerXPathNamespace() (Christian)
  . stream_context_get_default() (Wez)
  . stream_socket_enable_crypto() (Wez)
  . stream_wrapper_unregister() (Sara)
  . stream_wrapper_restore() (Sara)
  . stream_filter_remove() (Sara)
  . time_sleep_until() (Ilia)
- Added DomDocument::$recover property for parsing not well-formed
  XML Documents. (Christian)   
- Added Cursor support for MySQL 5.0.x in mysqli (Georg)
- Added proxy support to ftp wrapper via http. (Sara)
- Added MDTM support to ftp_url_stat. (Sara)
- Added zlib stream filter support. (Sara)
- Added bz2 stream filter support. (Sara)
- Added HTTP/1.1 and chunked encoding support to http:// wrapper. (Sara)
- Added max_redirects context option that specifies how many HTTP 
  redirects to follow. (Ilia)
- Added support of parameter=>value arrays to
  xsl_xsltprocessor_set_parameter(). (Tony)
- Fixed extension initialization to respect dependancies between extensions.
  (Wez)
- Fixed a problem with SPL iterators aggregating the innner iterator. (Marcus)
- Fixed bug with $HTTP_RAW_POST_DATA not getting set. (Brian)
- Fixed bug in mysql::client_version(). (Georg)
- Fixed ZTS destruction. (Marcus)
- Fixed bug #32924 (file included with "auto_prepend_file" can be included
  with require_once() or include_once()). (Stas)
- Fixed bug #32833 (Invalid opcode). (Dmitry)
- Fixed bug #32491 (File upload error - unable to create a temporary file).
  (Uwe Schindler)
- Fixed bug #32429 (method_exists() always return TRUE if __call method
  exists). (Dmitry)
- Fixed bug #32427 (Interfaces are not allowed 'static' access modifier).